updated masthead-subs with fixed height on ipad portrait and higher and scaling vw on mobile lg and below

--- a/assets/sass/vha/pages/fellow-profile/_index.scss
+++ b/assets/sass/vha/pages/fellow-profile/_index.scss
@@ -1,10 +1,16 @@
+@media (min-width: 87.5em) {
+    .masthead-sub {
+        height: 250px !important;
+    }
+}
+
 section#page--bios {
 
-    margin-top: -150px;
+    margin-top: -275px;
 
     .bio-card-attributes {
         padding-left: 25px;
-    }
+    }   
 
     @media screen and (max-width: 767px) {
         margin-top: -200px;
